# vulkan-sample

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
src/: main.cpp
src/shaders/: fragment.glsl  vertex.glsl
